1/28/13 i18n of titles
1/28/13 ported a few model classes from Java to JS
1/28/13 set up project skeleton